add links to other html pages

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>Akabanga Resort</h1>
     <h2>Your home away from home</h2>
     <ul>
-      <li>Accomodation</li>
-      <li>Activities</li>
-      <li>Travel Arrangements</li>
-      <li>Contact Information</li>
-      <li>Pictures</li>
+      <li><a href="accommodation.html">Accomodation</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="travel-arrangements.html">Travel Arrangements</a></li>
+      <li><a href="contact-information.html">Contact Information</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
     </ul>
     <p>Akabanga is a wonderful resort tucked in the hills and valleys of Taita Taveta. Enjoy a great climate 
       at this paradise location. It's up to you to choose who you want to bring as we cater to all clientelle.
