completed html pages

--- a/accommodation.html
+++ b/accommodation.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Accommodation</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <p></p>
+    <h1>Accommodation</h1>
+    <h2>Here is what we have to offer.</h2>
+    <img src="images/resort1.jpg" alt="beach image">
+    <p>We offer the highest quality housing.</p>
+    <p>Our suites provide spectacular views</p>
   </body>
 </html>
