--- a/activities.html
+++ b/activities.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Activities</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <p></p>
+    <h1>Activities</h1>
+    <h2>Keep yourself busy and engaged</h2>
+    <img src="images/resort1.jpg" alt="beach image">
+    <p>There are several activities for you to stay entertained</p>
+    <ul>
+      <li>Archery</li>
+      <li>Aerobics</li>
+      <li>Hiking</li>
+      <li>Swimming</li>
+    </ul>
   </body>
 </html>
