--- a/pictures.html
+++ b/pictures.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Pictures</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <p></p>
+    <h1>Pictures</h1>
+    <h2>Take a look at these amazing places</h2>
+    <img src="images/resort1.jpg" alt="beach image">
+    <img src="images/resort2.jpg" alt="beach image">
+    <img src="images/resort3.jpg" alt="beach image">
   </body>
 </html>
