--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Travel Arrangements</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <h1></h1>
-    <h2></h2>
+    <h1>Travel Arrangements</h1>
+    <h2>Make a booking now!</h2>
+    <img src="images/resort1.jpg" alt="beach image">
     <p></p>
     <p></p>
   </body>
