--- a/contact-information.html
+++ b/contact-information.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Contact Information</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <p></p>
+    <h1>Contact Information</h1>
+    <h2>If you need to reach us</h2>
+    <img src="images/resort1.jpg" alt="beach image">
+    <p>These are our contacts:</p>
+    <ul>
+      <li>Phone Number: +254 789 001 234</li>
+      <li>Email: resortwebsit001@resorts.com</li>
+    </ul>
+    
   </body>
 </html>
