--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Akabanga Resort</h1>
     <h2>Your home away from home</h2>
+    <img src="images/resort1.jpg" alt="beach image">
     <ul>
       <li><a href="accommodation.html">Accomodation</a></li>
       <li><a href="activities.html">Activities</a></li>
