add modifications to style.css

--- a/travel-arrangements.html
+++ b/travel-arrangements.html
@@ -9,7 +9,7 @@
     <h1>Travel Arrangements</h1>
     <h2>Make a booking now!</h2>
     <img src="images/resort1.jpg" alt="beach image">
-    <p></p>
-    <p></p>
+    <p>Come by plane, boat or bus. We have you covered.</p>
+    
   </body>
 </html>
